# HiveMind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pom.xml  project-build-spec.json  project-delivery-summary.md  require-bk.md  require.md  technical-specification-v1.0.0.md
console/: package.json
docs/: ARCHITECTURE.md  CoPaw_Agent_项目详设文档.md  Edict_Backend_项目详设文档.md  MEMORY_MIGRATION.md  REME_HEALTH_CHECK_IMPLEMENTATION.md  Tang Dynasty 后端详设说明书.md  backend_detail_design.md  context-compression-design.md  openapi-agent-engine.yaml  openapi.yaml
hivemind-agent-engine/: pom.xml
hivemind-backend/: README.md  pom.xml
hivemind-launcher/: pom.xml
reme-server/: .dockerignore  .env.example  AUTH.md  DASHSCOPE.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  start.py
reme-server/docker/: Dockerfile  docker-compose.yml
reme-server/patches/: README.md  apply_patch.py  apply_patches.bat  apply_patches.sh  revert_patch.py
reme-server/scripts/: health_check.bat  health_check.sh  install.ps1  install.sh  start_linux.sh  start_mcp.bat  start_mcp.sh  start_windows.bat
reme-server/src/: __init__.py
reme-server/src/app/: app.py  main.py  router.py  schema_models.py  service.py
tang-dynasty-agent-engine/: pom.xml
tang-dynasty-backend/: Dockerfile  README.md  init.sql  pom.xml
tang-dynasty-launcher/: pom.xml
website/: .env.example  CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+920 files in other folders)
