[project]
name = "reme-server"
version = "0.1.0"
description = "Standalone FastAPI server wrapping ReMe memory methods with Chroma and graceful fallback"
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "reme-ai==0.3.1.2",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
reme-server = "app.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"